gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-omit-gdb-pretty-printer-section.rs
#[omit_gdb_pretty_printer_section] // { dg-error ".E0658." "" { target *-*-* } }
fn main() {}

